# abyss

./: .gitignore  README.md  pyproject.toml
notebooks/: sample01.ipynb
src/abyss/landmarker/: drawing.py  pose.py
src/abyss/utils/: cv.py  data.py  mediapipe.py  plt.py
src/abyss/video/: frame.py  load.py
tests/video/: camera.py
